Revert "Add -proc:full option - remove warning"
This reverts commit b17375168c475c1d7dde9e1349ab8ad566db091e.